# TCC_MADR

./: .coverage  .env  .gitignore  Dockerfile  README.md  compose.yaml  database.db  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 2379a334c481_criando_tabela_conta.py  50fda108d3ff_relacao_tabela_livro_romancistas.py  77bb53ce3fad_crieando_tabela_livro.py  7ed6c347775c_create_romancistas_livros_view.py  80dc57b3dd72_criacao_da_tabela_romancistas.py
tcc_madr/: app.py  conn_database.py  models.py  schemas.py  security.py  utils.py
tcc_madr/routers/: auth.py  conta.py  livro.py  romancistas.py  romancistas_livro_view.py
tcc_madr/schemas/: schema_conta.py  schema_livro.py  schema_romancistas.py  schema_romancistas_livro.py
tests/: conftest.py  test_app.py  test_auth.py  test_conta.py  test_livro.py  test_romancistas.py  test_security.py
tests/utils/: _test_sanitize.py
